# CoreTorio

./: .clang-format  CMakeLists.txt  Makefile
include/: injection.hpp
priv_include/: injection_priv.hpp  object.hpp
src/: injection.cpp  injection_x64.cpp  main.cpp  object.cpp
